# segments

./: Cargo.toml  README.md
src/: iter.rs  lib.rs  segment.rs
src/disk/: chunk.rs  index.rs  invalid.rs  mod.rs  segment.rs
src/memory/: mod.rs  segment.rs
