[package]
name = "commitlog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bytes = "1.0.1"
fnv = "1.0.7"
log = "0.4.14"

[dev-dependencies]
mqttbytes = "0.3.0"
simplelog = "0.10.0"
