[package]
name = "segments"
version = "0.1.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["commitlog", "kafka"]
description = "kafka inspired rumqtt's mqtt commitlog"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bytes = "1.0.1"
fnv = "1.0.7"
log = "0.4.14"

[dev-dependencies]
mqttbytes = "0.3.0"
pretty_assertions = "0.7.2"
simplelog = "0.10.0"
tempfile = "3.2.0"
