[package]
name = "segments"
version = "0.3.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["commitlog", "kafka"]
description = "kafka inspired rumqtt's mqtt commitlog"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1"
byteorder = "1.3"
memmap = "0.7"
log = "0.4"

[dev-dependencies]
tempfile = "3.1"
pretty_assertions = "0.6"
